correction css collapse et fiche logement

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -50,15 +50,14 @@
     overflow: hidden;
     transition: all 0.7s ease-in-out;
     transform-origin: top;
-    position: absolute;
-    top: 10px;
     width: 100%;
+    margin-top: -50px;
   }
 
   .open {
     max-height: 1000px;
     transform: scaleY(1);
     opacity: 1;
-    top: 49px;
+    margin: 0;
   }
 }
