--- a/src/styles/pages/_accomodation.scss
+++ b/src/styles/pages/_accomodation.scss
@@ -80,7 +80,8 @@
       h4 {
         color: $color-1;
         font-weight: 500;
-        max-width: 50px;
+        max-width: 100px;
+        text-align: right;
 
         @media screen and (max-width: 767px) {
           font-size: 13px;
